Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: foo-pipelines-demo-service
  name: foo-pipelines-demo-service
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: foo-pipelines-demo-app
